--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
-#Mon Dec 15 13:10:57 CET 2008
+#Do not edit app.grails.* properties, they may change automatically. DO NOT put application configuration in here, it is not the right place!
+#Thu Jan 22 00:18:32 CET 2009
 app.version=0.1
 app.servlet.version=2.4
-app.grails.version=1.0.4
+app.grails.version=1.0.5-SNAPSHOT
 app.name=donosiciel
