--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,7 @@
-#Do not edit app.grails.* properties, they may change automatically. DO NOT put application configuration in here, it is not the right place!
-#Thu Jan 22 00:18:32 CET 2009
+#utf-8
+#Thu Apr 16 17:25:15 CEST 2009
 app.version=0.1
 app.servlet.version=2.4
-app.grails.version=1.0.5-SNAPSHOT
+app.grails.version=1.1
+plugins.hibernate=1.1
 app.name=donosiciel
