--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,8 @@
 #utf-8
-#Thu Apr 16 17:25:15 CEST 2009
+#Thu Apr 16 18:10:44 CEST 2009
 app.version=0.1
 app.servlet.version=2.4
 app.grails.version=1.1
+plugins.mail=0.5
 plugins.hibernate=1.1
 app.name=donosiciel
